[gd_scene load_steps=9 format=3 uid="uid://bviskh24tpdoh"]

[ext_resource type="Script" uid="uid://bkw3rxfs6ifnj" path="res://sound/sfx/sound_effects.gd" id="1_hnqyc"]
[ext_resource type="AudioStream" uid="uid://b8knam4younq2" path="res://assets/sound_fx/water-drip-45622.mp3" id="2_x4e6e"]
[ext_resource type="AudioStream" uid="uid://bw8cdaxo8b6x3" path="res://assets/sound_fx/open-door-sound.mp3" id="3_apsx1"]
[ext_resource type="AudioStream" uid="uid://dmnxdn3t2xvcu" path="res://assets/sound_fx/door-lock-82542.mp3" id="4_aoxs6"]
[ext_resource type="AudioStream" uid="uid://deqwcy72osn2s" path="res://assets/sound_fx/horses-galloping-sound-effect-359255.mp3" id="5_g3qey"]
[ext_resource type="AudioStream" uid="uid://dnjdfcd4fe8wv" path="res://assets/sound_fx/footsteps-walking-boots-parquet-1-420135.mp3" id="6_q2jle"]
[ext_resource type="AudioStream" uid="uid://cxa2d8e3km206" path="res://assets/sound_fx/creaking-door-41706.mp3" id="7_rfxo5"]
[ext_resource type="AudioStream" uid="uid://dyirtmc2hy3qb" path="res://assets/sound_fx/wooden-door-slamming-close-79934.mp3" id="8_8du16"]

[node name="SoundEffects" type="Node"]
script = ExtResource("1_hnqyc")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Drip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_x4e6e")

[node name="DoorOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_apsx1")

[node name="LockClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_aoxs6")
volume_db = -14.618

[node name="HorseGallop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g3qey")

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q2jle")

[node name="CreakyDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rfxo5")

[node name="SlamDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8du16")
